<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdEmpl"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_employee"
        android:textSize="@dimen/standard_size_30_sp"
        android:layout_marginBottom="@dimen/margin_but_20_sp"
        android:textAlignment="center"
        android:textColor="@color/blue"/>

    <EditText
        android:id="@+id/empFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_first_name"
        android:maxLength="30"/>

    <EditText
        android:id="@+id/empLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_last_name"
        android:maxLength="30"/>

    <EditText
        android:id="@+id/empEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:maxLength="40"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@color/colorAccent"
        android:onClick="updEmployee"
        android:layout_marginTop="@dimen/margin_but_20_sp"/>
</LinearLayout>